Fix overflowing

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -212,6 +212,7 @@ nav ul a:hover, nav ul .active {
 .projects-section a {
   text-decoration: none;
   color: rgb(214, 90, 49);
+  text-overflow: ellipsis;
 }
 .projects-section p {
   margin-top: 10px;
@@ -235,6 +236,7 @@ nav ul a:hover, nav ul .active {
 .projects-section figure img {
   max-height: 300px;
   border-radius: 15px;
+  max-width: 100%;
 }
 
 section {
